--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.71"
 derive-getters = "0.2.1"
+either = { version = "1.8.1", features = ["serde"] }
+mexprp = { version = "0.3.1", default-features = false }
 rand = "0.8.5"
 serde = { version = "1.0.162", features = ["derive"] }
 serde_json = "1.0.96"
